# AkaneBot

./: .example.env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SETUP.py  anti_bot_killer.py  bot.py  config.json  config.template  docker-compose.yaml  env.template  main.py  ntfc1.py  pyproject.toml  requirements.txt  requirements_dev.txt  test.html  test.json
.github/workflows/: code-formatting.yml  pylint.yml
archive/: 3x3mega.ipynb  README.md  mangaplus.py
docker/: docker-compose.yaml
extensions/: adata.py  anime_plots.py  anime_utils.py  gacha.py  help.py  info.py  ping.py  prefix_setup.py  prog_utils.py  reload.py  sauce.py  seasonals.py  subs.py  tasks_utils.py  vn.py  yt.py
functions/: algorithms.py  anilist.py  anilist_graph.py  buttons.py  checks.py  components.py  errors.py  fetch_trends.py  hakush.py  help.py  models.py  search_images.py  utils.py  views.py
utils/: algorithms.py  anilist.py  anilist_client.py  anilist_graph.py  buttons.py  card.py  components.py  errors.py  hakush.py  help.py  misc.py  views.py
