[project]
requires-python = ">=3.8"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".vscode",
    ".venv",
    "venv"
]
select = ["E", "F", "B"]
line-length = 100


[tool.isort]
known_third_party = ["PIL", "aiohttp_client_cache", "bs4", "dateutil", "dotenv", "fast_colorthief", "feedparser", "fuzzywuzzy", "hikari", "isodate", "lightbulb", "miru", "pandas", "plotly", "psutil"]

[tool.black]
target-versions = ["py311", "py38", "py39", "py310"]