[project]
requires-python = ">=3.8"

[tool.ruff]
exclude = [
    ".git",
    ".github",
    ".vscode",
    ".venv",
    "venv"
]
lint.select = ["E", "F", "B"]
line-length = 180


[tool.isort]
known_third_party = ["PIL", "aiohttp_client_cache", "arrow", "bs4", "ciso8601", "curl_cffi", "dateutil", "dotenv", "fast_colorthief", "feedparser", "hikari", "isodate", "lightbulb", "miru", "orjson", "pandas", "plotly", "psutil", "pytz", "rapidfuzz", "requests_html", "seventv"]
profile= "black"

[tool.black]
target-versions = ["py38", "py39", "py310", "py311"]